@@ -1,5 +1,9 @@
 2008-12-03 Frank Naegler  <typo3@naegler.net>
 
+	* adding method findUnconfirmedFriends to the userGateway, we need this to identify unconfirmed friend requests.
+
+2008-12-03 Frank Naegler  <typo3@naegler.net>
+
 	* adding pagebrowser to groupList
 
 2008-12-02 Frank Naegler  <typo3@naegler.net>
